Creating data package structure inside muffin_v_chihuahua

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .idea/
+
+muffin_v_chihuahua/data/chihuahua/*
+!muffin_v_chihuahua/data/chihuahua/__init__.py
+
+muffin_v_chihuahua/data/muffin/*
+!muffin_v_chihuahua/data/muffin/__init__.py
