README : how to download images and a model

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 .idea/
 
+# dataset of chihuahua images
 muffin_v_chihuahua/data/chihuahua/*
 !muffin_v_chihuahua/data/chihuahua/__init__.py
 
+# dataset of muffin images
 muffin_v_chihuahua/data/muffin/*
 !muffin_v_chihuahua/data/muffin/__init__.py
+
+# ML pre-trained model
+muffin_v_chihuahua/inception_v3_weights_tf_dim_ordering_tf_kernels.h5
